Replace deprecated new URL constructors (#26051)
* Replace deprecated new URL constructors in nucleus

Refs #25625

Co-Authored-By: Claude Opus 4.7 <noreply@anthropic.com>

* Replace deprecated new URL constructors in appserver common, appclient, webservices, deployment

Refs #25625

Co-Authored-By: Claude Opus 4.7 <noreply@anthropic.com>

* Replace deprecated new URL constructors in appserver/web

Refs #25625

Co-Authored-By: Claude Opus 4.7 <noreply@anthropic.com>

* Replace deprecated new URL constructors in admingui, load-balancer, extras

Refs #25625

Co-Authored-By: Claude Opus 4.7 <noreply@anthropic.com>

* Replace deprecated new URL constructors in modern application tests

Refs #25625

Co-Authored-By: Claude Opus 4.7 <noreply@anthropic.com>

* Replace deprecated new URL constructors in embedded web-api tests (partial)

Refs #25625

Co-Authored-By: Claude Opus 4.7 <noreply@anthropic.com>

* Replace deprecated new URL constructors in more embedded web-api tests

Refs #25625

Co-Authored-By: Claude Opus 4.7 <noreply@anthropic.com>

* Replace deprecated new URL constructors in remaining embedded tests

Refs #25625

Co-Authored-By: Claude Opus 4.7 <noreply@anthropic.com>

* Replace deprecated new URL constructors in quicklook, sse, osgi-javaee tests

Refs #25625

Co-Authored-By: Claude Opus 4.7 <noreply@anthropic.com>

* Replace deprecated new URL constructors in paas and community tests

Refs #25625

Co-Authored-By: Claude Opus 4.7 <noreply@anthropic.com>

* Replace deprecated new URL constructors in webservice annotations TestClient (partial)

Refs #25625

Co-Authored-By: Claude Opus 4.7 <noreply@anthropic.com>

* Replace deprecated new URL constructors in webservice annotations TestClients

Refs #25625

Co-Authored-By: Claude Opus 4.7 <noreply@anthropic.com>

* Replace deprecated new URL constructors in webservice ejb_annotations and remaining clients

Refs #25625

Co-Authored-By: Claude Opus 4.7 <noreply@anthropic.com>

* Replace deprecated new URL construct