@@ -1,4 +1,5 @@
 /*
+ * Copyright (c) 2026 Contributors to the Eclipse Foundation.
  * Copyright (c) 1997, 2018 Oracle and/or its affiliates. All rights reserved.
  *
  * This program and the accompanying materials are made available under the
@@ -71,7 +72,7 @@ public class WebTest
 
         jsessionId = accessServlet();
         String redirect = accessLoginPage();
-        followRedirect(new URL(redirect).getPath());
+        followRedirect(URI.create(redirect).toURL().getPath());
     }
 
     /*
