@@ -1,4 +1,5 @@
 /*
+ * Copyright (c) 2026 Contributors to the Eclipse Foundation.
  * Copyright (c) 1997, 2018 Oracle and/or its affiliates. All rights reserved.
  *
  * This program and the accompanying materials are made available under the
@@ -35,7 +36,7 @@ public class WebTest {
         String contextRoot = args[2];
 
         try {
-            URL url = new URL("http://" + host  + ":" + port + "/");
+            URL url = URI.create("http://" + host  + ":" + port + "/").toURL();
             System.out.println("Invoking url: " + url.toString());
             HttpURLConnection conn = (HttpURLConnection) url.openConnection();
             conn.setDoOutput(true);
