@@ -1,4 +1,5 @@
 /*
+ * Copyright (c) 2026 Contributors to the Eclipse Foundation.
  * Copyright (c) 1997, 2018 Oracle and/or its affiliates. All rights reserved.
  *
  * This program and the accompanying materials are made available under the
@@ -63,8 +64,8 @@ public class WebTest {
         HttpURLConnection conn = null;
         int responseCode = -1;
 
-        url = new URL("http://" + host  + ":" + port
-                      + contextRoot + "/Servlet_1");
+        url = URI.create("http://" + host  + ":" + port
+                      + contextRoot + "/Servlet_1").toURL();
         System.out.println("Connecting to: " + url.toString());
         conn = (HttpURLConnection) url.openConnection();
         conn.connect();
@@ -73,8 +74,8 @@ public class WebTest {
             fail = true;
         }
 
-        url = new URL("http://" + host  + ":" + port
-                      + contextRoot + "/Servlet_2");
+        url = URI.create("http://" + host  + ":" + port
+                      + contextRoot + "/Servlet_2").toURL();
         System.out.println("Connecting to: " + url.toString());
         conn = (HttpURLConnection) url.openConnection();
         conn.connect();
