@@ -82,7 +82,7 @@ public class WebTest{
                                                      SSLSocketFactory ssf)
                     throws Exception{
 
-        URL url = new URL(urlAddress);
+        URL url = URI.create(urlAddress).toURL();
         HttpsURLConnection.setDefaultSSLSocketFactory(ssf);
         HttpsURLConnection connection = (HttpsURLConnection) url.openConnection();
 
