@@ -1,4 +1,5 @@
 /*
+ * Copyright (c) 2026 Contributors to the Eclipse Foundation.
  * Copyright (c) 1997, 2018 Oracle and/or its affiliates. All rights reserved.
  *
  * This program and the accompanying materials are made available under the
@@ -52,7 +53,7 @@ public class WebTest {
          throws Exception
     {
 
-        URL url = new URL("http://" + host  + ":" + port + uri);
+        URL url = URI.create("http://" + host  + ":" + port + uri).toURL();
         System.out.println("Connecting to: " + url.toString());
         HttpURLConnection conn = (HttpURLConnection) url.openConnection();
         conn.connect();
