@@ -1,4 +1,5 @@
 /*
+ * Copyright (c) 2026 Contributors to the Eclipse Foundation.
  * Copyright (c) 1997, 2018 Oracle and/or its affiliates. All rights reserved.
  *
  * This program and the accompanying materials are made available under the
@@ -69,7 +70,7 @@ public class WebTest {
         String url = "http://" + host + ":" + port + contextRoot
                      + "/CreateSession";
         HttpURLConnection conn = (HttpURLConnection)
-            (new URL(url)).openConnection();
+            URI.create(url).toURL().openConnection();
         int code = conn.getResponseCode();
         if (code != 200) {
             throw new Exception("Unexpected return code: " + code);
@@ -79,7 +80,7 @@ public class WebTest {
 
         url = "http://" + host + ":" + port + contextRoot
                      + "/CheckResult";
-        conn = (HttpURLConnection) (new URL(url)).openConnection();
+        conn = (HttpURLConnection) URI.create(url).toURL().openConnection();
         code = conn.getResponseCode();
         if (code != 200) {
             throw new Exception("Unexpected return code: " + code);
