@@ -1,4 +1,5 @@
 /*
+ * Copyright (c) 2026 Contributors to the Eclipse Foundation.
  * Copyright (c) 2017, 2018 Oracle and/or its affiliates. All rights reserved.
  *
  * This program and the accompanying materials are made available under the
@@ -25,6 +26,7 @@ import javax.xml.transform.stream.StreamSource;
 import java.io.InputStream;
 import java.io.ByteArrayOutputStream;
 import org.w3c.dom.Node;
+import java.net.URI;
 import java.net.URL;
 import javax.xml.transform.OutputKeys;
 import javax.xml.transform.Transformer;
@@ -43,7 +45,7 @@ public class Client {
         stat.addDescription("webservices-simple-restful-svc");
         String endpointAddress =
             "http://HTTP_HOST:HTTP_PORT/restful/webservice/AddNumbersService";
-        URL url = new URL(endpointAddress+"?num1=10&num2=20");
+        URL url = URI.create(endpointAddress+"?num1=10&num2=20").toURL();
         System.out.println ("Invoking URL="+url);
         process(url, args);
         stat.printSummary("webservices-simple-restful-svc");
