@@ -20,6 +20,7 @@ package org.glassfish.tests.embedded.web;
 import java.io.BufferedReader;
 import java.io.File;
 import java.io.InputStreamReader;
+import java.net.URI;
 import java.net.URL;
 import java.net.URLConnection;
 import java.util.ArrayList;
@@ -105,7 +106,7 @@ public class EmbeddedCreateVirtualServerTest {
         Context context = embedded.createContext(docRoot);
         vs.addContext(context, contextRoot);
 
-        URL servlet = new URL("http://localhost:"+newPort+"/"+contextRoot+"/hello");
+        URL servlet = URI.create("http://localhost:"+newPort+"/"+contextRoot+"/hello").toURL();
         URLConnection yc = servlet.openConnection();
         StringBuilder sb = new StringBuilder();
         try (BufferedReader in = new BufferedReader(new InputStreamReader(yc.getInputStream()))) {
