@@ -1,4 +1,5 @@
 /*
+ * Copyright (c) 2026 Contributors to the Eclipse Foundation.
  * Copyright (c) 1997, 2018 Oracle and/or its affiliates. All rights reserved.
  *
  * This program and the accompanying materials are made available under the
@@ -75,7 +76,7 @@ public class OsgiWeldTestNG {
         boolean result = false;
         String testurl = "http://" + m_host  + ":" + m_port + "/"
                 + strContextRoot +"/OsgiWeld?command=exports";
-        URL url = new URL(testurl);
+        URL url = URI.create(testurl).toURL();
         HttpURLConnection conn = (HttpURLConnection) url.openConnection();
         conn.connect();
         int responseCode = conn.getResponseCode();
@@ -95,7 +96,7 @@ public class OsgiWeldTestNG {
 
     private boolean checkForString(String testurl, String str) throws Exception {
         //System.out.println("Checking for " + str + "in " + testurl);
-        URL url = new URL(testurl);
+        URL url = URI.create(testurl).toURL();
         HttpURLConnection conn = (HttpURLConnection) url.openConnection();
         conn.connect();
         int responseCode = conn.getResponseCode();
