@@ -1,4 +1,5 @@
 /*
+ * Copyright (c) 2026 Contributors to the Eclipse Foundation.
  * Copyright (c) 2018 Oracle and/or its affiliates. All rights reserved.
  *
  * This program and the accompanying materials are made available under the
@@ -256,7 +257,7 @@ public class httpd implements Runnable,LogMessage
                     else if(server_response.statusCode==302 || server_response.statusCode==307) {
                         System.out.println("Inside Redirection******************************");
                         String Host=server_response.mh.get("Location");
-                        URL newurl=new URL(Host);
+                        URL newurl=URI.create(Host).toURL();
                         String actualhost=newurl.getHost();
                         Socket serversocket=new Socket(actualhost,80);
                         start=Host.indexOf("://")+3;
@@ -327,7 +328,7 @@ public class httpd implements Runnable,LogMessage
                         String Host=server_response.mh.get("Location");
                         //System.out.println("New host is"+Host);
 
-                        URL newurl=new URL(Host);
+                        URL newurl=URI.create(Host).toURL();
                         String actualhost=newurl.getHost();
                         Socket serversocket=new Socket(actualhost,80);
                         start=Host.indexOf("://")+3;
